--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -4,6 +4,12 @@
     Layout = null;
 }
 
+<style>
+    .text-danger {
+        color: blue;
+    }
+</style>
+
 <!DOCTYPE html>
 
 <html>
@@ -22,7 +28,7 @@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-danger" style="color: red;"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
