--- a/Views/Employee/Delete.cshtml
+++ b/Views/Employee/Delete.cshtml
@@ -12,7 +12,8 @@
     <title>Delete</title>
 </head>
 <body>
-
+<h1>@Model.EmployeeId</h1>
+<h1>@Html.DisplayNameFor(model => model.Name)</h1>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Employee</h4>
@@ -25,7 +26,7 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="EmployeeId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
