--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -1,17 +1,6 @@
 @model IEnumerable<asp_practice_app.Models.Employee>
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
+@Html.Partial("_Edit")
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -39,5 +28,4 @@
 }
     </tbody>
 </table>
-</body>
-</html>
+<p><a asp-action="Create" class="btn btn-primary">Add A New Contact</a></p>
